--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "homepage": "https://github.com/jasonconnor/File-Upload#readme",
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.3",
-    "multer": "^1.4.2"
+    "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
+    "styled-components": "^5.2.1"
   }
 }
